# coda

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  README.md  mise.toml
.cargo/: config.toml
docs/: ADR-0001-keymap-first-tui-editor.md  ADR-0002-context-aware-keybinding-resolution.md  ADR-0003-terminal-keyboard-capability.md  ADR-0004-implementation-language-and-architecture.md  ADR-0005-configuration-format-and-layout.md  ADR-0006-syntax-highlighting.md  ADR-0007-modifier-delivery-strategy.md  ADR-0008-clipboard-and-mouse-strategy.md  ADR-0009-buffer-data-structure.md  ADR-0010-rendering-approach.md  ADR-0011-os-convention-default-keymap.md  BACKLOG.md  SPEC-0001-mvp-scope.md  SPEC-0002-keybinding-system.md  SPEC-0003-terminal-input.md  SPEC-0004-vscode-import.md  SPEC-0005-cli-and-config.md  TASK-260705-01-scaffold-and-raw-input.md  TASK-260705-02-normalized-key-event.md  TASK-260705-03-buffer-core.md  TASK-260705-04-cursor-selection-undo.md  TASK-260705-05-keymap-resolver.md  TASK-260705-buffer-core.md  TASK-260705-cursor-selection-undo.md  TASK-260705-keymap-resolver.md  TASK-260705-normalized-key-event.md  TASK-260705-scaffold-and-raw-input.md  TASK-260706-06-user-bindings-loader.md  TASK-260706-07-renderer.md  TASK-260706-08-event-loop-editor.md  TASK-260706-09-first-dogfood-feedback.md  TASK-260706-10-vscode-importer.md  TASK-260706-11-moveline-and-os-defaults.md  TASK-260706-12-find-replace.md  TASK-260706-13-clipboard.md  TASK-260706-14-syntax-highlighting.md  TASK-260706-15-multi-buffer.md  TASK-260706-99-backlog.md  TASK-260706-clipboard.md  (+33 more)
(+65 files in other folders)
