[package]
name = "coda"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
toml = "1.1.2"
unicode-segmentation = "1"
unicode-width = "0.2"
