[workspace]
# root package (coda) 方式。src/ は動かさず、release 補助の xtask crate だけを member に足す
# (docs/TASK-260712-release-xtask-migration.md)。素の `cargo build` は root package を
# 暗黙のデフォルト対象にするが、goreleaser の Rust builder は workspace 化を検知すると
# 対象 package の明示を要求するため、.goreleaser.yaml の build flags に --package=coda を追加した
members = ["xtask"]

[package]
name = "coda"
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
toml = "1.1.2"
unicode-segmentation = "1"
unicode-width = "0.2"

# terminal 依存は platform ごとに分離する (docs/TASK-260713-windows-minimal-distribution.md)。
# unix: termios / poll / signal を libc で。windows: Console API を windows-sys で
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
